@@ -4,7 +4,7 @@ use warnings;
 
 # Modules.
 use Text::DSV;
-use Test::More 'tests' => 4;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 
 # Test.
@@ -25,9 +25,33 @@ is_deeply(
 );
 
 # Test.
+@ret = $obj->parse_line('1:text\:text\:text');
+is_deeply(
+	\@ret,
+	[1, 'text:text:text'],
+	'Parse line data with multiple \':\'.',
+);
+
+# Test.
 @ret = $obj->parse_line('1:text\ntext');
 is_deeply(
 	\@ret,
 	[1, "text\ntext"],
 	'Parse line data with newline.',
+);
+
+# Test.
+@ret = $obj->parse_line('1:text\ntext\ntext');
+is_deeply(
+	\@ret,
+	[1, "text\ntext\ntext"],
+	'Parse line data with multiple newline.',
+);
+
+# Test.
+@ret = $obj->parse_line('1:text\ntext\:text');
+is_deeply(
+	\@ret,
+	[1, "text\ntext:text"],
+	'Parse line data with \':\' and newline.',
 );
