@@ -1,4 +1,5 @@
 0.08
+ - Add new tests for multiple escaped characters in parsing.
  - Fix parsing multiple escaped characters.
 
 0.07 2013-10-18
